add all experiments, increase number of models and integrate stable diffusion into service

--- a/docker/FastAPI/Dockerfile
+++ b/docker/FastAPI/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends libpq-dev libgl1 libglib2.0-0 && \
     rm -rf /var/lib/apt/lists/* && \
     pip install --upgrade pip && \
-    pip install --no-cache-dir -r app/requirements.txt -r models/LightSB/ALAE/requirements.txt && \
+    pip install --no-cache-dir -r models/LightSB/ALAE/requirements.txt -r app/requirements.txt && \
     JACOBIAN_PATH=$(find /usr/local/lib/python3.8/site-packages/dlutils -name jacobian.py) && \
     sed -i '/from torch\.autograd\.gradcheck import zero_gradients/d' "$JACOBIAN_PATH" && \
     echo '\ndef zero_gradients(i):\n    for t in iter_gradients(i):\n        t.zero_()' >> "$JACOBIAN_PATH" && \
