--- a/docker/docker-compose.FastAPI.yaml
+++ b/docker/docker-compose.FastAPI.yaml
@@ -21,3 +21,10 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
